--- a/package.json
+++ b/package.json
@@ -1,19 +1,24 @@
 {
   "name": "Final_Project",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon --inspect index.js",
     "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "express-flash": "0.0.2",
+    "express-session": "^1.17.1",
+    "express-validator": "^6.10.0",
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.22",
@@ -21,5 +26,14 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chuongdavid/cosmetic.git"
+  },
+  "bugs": {
+    "url": "https://github.com/chuongdavid/cosmetic/issues"
+  },
+  "homepage": "https://github.com/chuongdavid/cosmetic#readme",
+  "description": ""
 }
