--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nanoid": "^3.1.22",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
